packages/frontend/src/public-pages/assets/css/site.css
/* ... */
[type=text]:focus,
[type=email]:focus,
[type=number]:focus,
[type=password]:focus,
[type=search]:focus,
[type=tel]:focus,
[type=url]:focus,
textarea:focus {
	border: 1px solid #000;
	outline: none;
}

[type=text].sm,
[type=email].sm,
[type=number].sm,
[type=password].sm,
[type=search].sm,
[type=tel].sm,
[type=url].sm,
select.sm {
	height: 36px;
	font-size: .9rem;
}

[type=checkbox],
[type=radio] {
	margin: 0;
	font-size: 1.5rem;
	vertical-align: text-bottom;
}

.list-radio label,
.list-checkbox label,
.checkbox-solo {
	-ms-flex-align: baseline;
	-webkit-box-align: baseline;
	align-items: baseline;
}

.list-radio label [type=radio],
.list-checkbox label [type=checkbox],
.checkbox-solo > input {
	margin-right: .375rem;
	-ms-flex: 1 0 20px;
	-webkit-box-flex: 1;
	flex: 1 0 20px;
	max-width: 20px;
}

.checkbox-solo > span {
	-ms-flex: 1;
	-webkit-box-flex: 1;
	flex: 1;
}

textarea {
	display: block;
	width: 100%;
	border: 1px solid rgba(0,0,0,.5);
	height: 200px;
	border-radius: 3px;
	padding: .75rem;
	font-size: 1rem;
	font-family: Lato,sans-serif;
	box-shadow: inset 0 1px 4px 0 rgba(0,0,0,.125);
}

textarea.sm {
	height: 75px;
	padding: .75rem;
	font-size: .9rem;
}

select {
	display: block;
	width: 100%;
	border: 1px solid rgba(0,0,0,.5);
	height: 44px;
	border-radius: 3px;
	background: #fff url(../img/bg-select.png) right center no-repeat;
	padding: 0 2rem 0 .75rem;
	font-size: 1rem;
	font-family: Lato,sans-serif;
	-webkit-appearance: none;
	-moz-appearance: none;
	appearance: none;
}

select::-ms-expand {
	display: none;
}

.nowrap select {
	width: auto;
}

/* Form errors */

[type=text].has-error,
[type=email].has-error,
[type=number].has-error,
[type=password].has-error,
[type=search].has-error,
[type=tel].has-error,
[type=url].has-error,
select.has-error,
textarea.has-error {
	border-color: #d3172c;
	background-color: #fdecee;
}



/* Search wrap
---------------------------------------------------------------------------- */

.search-wrap {
	position: relative;
	color: #2a2a28;
}

.search-wrap input {
	padding-left: 2rem;
	-webkit-appearance: none;
}

.search-wrap:after {
	display: block;
	position: absolute;
	z-index: 1;
	top: 50%;
	left: .75rem;
	width: .9rem;
	height: .9rem;
	background: transparent url('../img/search.svg') center no-repeat;
	background-size: .9rem;
	transform: translateY(-50%);
	content: '';
}

/* Form actions
---------------------------------------------------------------------------- */

.form-actions > * {
	margin: 0 .5rem;
}

/* Address fields
---------------------------------------------------------------------------- */

.form-item--address .form-item__control > div + div,
.form-item--address .city-state-zip > div + div {
	margin: .5rem 0 0;
}

/* ----------------------------------------------------------------------------
Primary elements
---------------------------------------------------------------------------- */

body {
	background-color: #fff;
	color: #2a2a28;
	margin: 0;
}

.main {
	display: block;
	background-color: #e5e5e5;
	padding: 1rem;
}

/* ----------------------------------------------------------------------------
Presented by
---------------------------------------------------------------------------- */

.presented-by {
	-ms-flex-pack: center;
	-webkit-box-pack: center;
	justify-content: center;
	color: #fff;
	line-height: 1.25;
}

.presented-by > div {
	background-color: rgba(0,0,0,.25);
	padding: .75rem 1.5rem;
	border-radius: 100px;
}

.presented-by a:link,
.presented-by a:visited {
	display: block;
	margin: .5rem 0 0;
	color: rgba(255,255,255,.7);
	text-decoration: none;
}

.presented-by a:hover,
.presented-by a:active {
	color: #fff;
	text-decoration: underline;
	text-decoration-color: #fff;
	text-decoration-skip: ink;
}

.presented-by img {
	max-width: 200px;
	max-height: 50px;
}

/* ----------------------------------------------------------------------------
Page header
---------------------------------------------------------------------------- */

.page-header {
	-ms-flex-pack: justify;
	-webkit-box-pack: justify;
	justify-content: space-between;
	background: #fff;
	padding: 0 .75rem;
	height: 52px;
	line-height: 1;
}

/* Page header logo
---------------------------------------------------------------------------- */

.page-header__logo img {
	display: block;
	max-width: 40px;
	max-height: 40px;
	border: 0;
}

/* Page header nav
---------------------------------------------------------------------------- */

.page-header__nav-menu {
	display: none;
}

.page-header__nav-menu a.here {
	color: #000;
}

.page-header__nav-menu a + a {
	margin: 0 0 0 1.5rem;
}

.page-header__search {
	-ms-flex: 1;
	-webkit-box-flex: 1;
	flex: 1;
	margin: 0 1rem;
	border-left: 1px solid #dfdfdf;
	border-right: 1px solid #dfdfdf;
	padding: 0 1rem;
}

.page-header__search:before {
	display: block;
	-ms-flex: 1 0 16px;
	-webkit-box-flex: 1;
	flex: 1 0 16px;
	width: 16px;
	height: 16px;
	background: transparent url('../img/search.svg') center no-repeat;
	background-size: 16px 16px;
	content: '';
	opacity: .25;
}

.page-header__search [type=search] {
	margin: 0 0 0 .75rem;
	border: 0;
	box-shadow: none;
	padding: 0;
	height: 100%;
	border-radius: 0;
	-webkit-appearance: none;
}

.page-header__search [type=search]::-webkit-input-placeholder {
	color: #9B9B97;
}

.page-header__search [type=search]::-moz-placeholder {
	color: #9B9B97;
	opacity: 1;
}

.page-header__search [type=search]:-ms-input-placeholder {
	color: #9B9B97;
}

.page-header__search [type=search]::-ms-input-placeholder {
	color: #9B9B97;
}

/* Page header user info
---------------------------------------------------------------------------- */

.page-header__cart {
	display: none;
	font-weight: 700;
	font-size: 2.75rem;
}

.page-header__cart [class*=fa-] {
	margin: 0 .4rem 0 0;
}

/* Page header mobile toggle
---------------------------------------------------------------------------- */

.page-header__nav-toggle [class*=fa-] {
	margin: 0 .25rem 0 0;
}
/* ... */

